--- a/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
+++ b/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
@@ -84,7 +84,7 @@
         <div class="form-group col-sm-6">
           <div class="SearchBox">
             <select formControlName="level_id" class="selectpicker" placeholder="Course Name">
-              <option disabled selected>{{'Level' | translate}}</option>
+              <option disabled value="">{{'Level' | translate}}</option>
               <option value=1>{{'1st' | translate}}</option>
               <option value=2>{{'2nd' | translate}}</option>
               <option value=3>{{'3rd' | translate}}</option>
