--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -310,7 +310,7 @@
       </div> -->
   </div>
 </nav>
-<nav class="vertical_nav vertical_nav__minify">
+<nav class="vertical_nav ">
     <div class="left_section menu_left" id="js-menu">
         <div class="left_section">
             <ul>
