--- a/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
+++ b/src/app/pages/instructor/instructor-add-lecture/instructor-add-lecture.component.html
@@ -99,8 +99,8 @@
                                         <select formControlName="course" (change)="onCourseSelect($event)">
                                             <option disabled value="">{{"Select Course" | translate}}</option>
                                             <option *ngFor="let course of instructorCourses"
-                                                value="{{course.course_id}}">
-                                                {{course.course_title}}</option>
+                                                value="{{course.id}}">
+                                                {{course.name}}</option>
 
                                         </select>
                                     </div>
