--- a/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
+++ b/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
@@ -118,7 +118,7 @@
       </form>
     </div>
     <!-- search.value -->
-    <div class="row" infiniteScroll [infiniteScrollDistance]="1" (scrolled)="onScroll()"
+    <div class="row" infiniteScroll [infiniteScrollDistance]="1" (scrolled)="onScroll(searchForm)"
       [infiniteScrollDisabled]="lastPage || disableScroll">
       <div class="col-md-12">
         <div class="table-responsive mt-30">
