--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16669,7 +16669,6 @@ margin: 0px 0px 0px 10px;
   right: 3px !important;
   top: 2px !important;
   width: 100%;
-
 }
 .searchField button{
   border-radius: 17px;
@@ -16710,7 +16709,7 @@ margin: 0px 10px !important;
     border-top-left-radius: 0px !important;
     padding:0px 0px 0px 5px !important;
 }
-.refreshbutt{
+.refreshbutt, .rtl .refreshbutt{
   height: 34px;
 margin-top: 35px;
 }
@@ -16725,7 +16724,7 @@ margin-top: 35px;
 }
 .searchSection{
   /* background: #fff; */
-  background: url(../images/design.png) center;
+  /* background: url(../images/design.png) center; */
   padding: 20px;
     margin: 20px;
     background-size: cover;
@@ -16765,6 +16764,9 @@ margin-top: 35px;
 }
 .searchDiv{
   display: flex;
+}
+.searchField .dropdown-toggle{
+	width: 100%;
 }
 /*
 .searchSection{
@@ -16897,4 +16899,45 @@ input:checked + .slider:before {
   }
   .searchSection form .formButtn button {
     width: 25% !important;}
+}
+
+
+@media (min-width: 750px){
+  .wrapper{
+    margin-right: 0px !important;
+    margin-left: 240px !important;
+
+}
+  .rtl .wrapper {
+    margin-left: 0px !important;
+    margin-right: 240px !important;
+}
+.vertical_nav {
+  position: fixed;
+  /* left: -240px; */
+  top: 60px;
+  bottom: 0;
+  background: #fff;
+  overflow: hidden;
+  width: 240px;
+  z-index: 995;
+}
+.vertical_nav .menu--label {
+  display: block;
+  position: initial;
+  background: transparent;
+}
+.vertical_nav .menu-collapse:checked ~ .sub_menu {
+  background: #ffecec;
+  display: block;
+}
+.vertical_nav .sub_menu {
+  position: initial;
+  width: 100%;
+ }
+
+
+
+
+
 }
