--- a/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
+++ b/src/app/pages/admin/advanced-search-payment-student/advanced-search-payment-student.component.html
@@ -196,6 +196,7 @@
               {{enrollmentStudentsArray.length}} </button>
 
           </table>
+          <a *ngIf="enrollmentStudentsArray.length < totalStudents" (click)="onScroll(searchForm)" style="color: blue;">{{"load more..." | translate}}</a>
           <p *ngIf="!enrollmentStudentsArray.length && !loading">{{"No result found" | translate}}</p>
           <div *ngIf="loading" class="col-md-12">
             <div class="main-loader mt-20">
